# cathsim

./: .gitignore  .gitmodules  .ruff.toml  3D fluid force  MANIFEST.in  MJMODEL.TXT  MUJOCO_LOG.TXT  README.md  TERMS.md  astar_path  contributors.md  custom_fluid_force.py  environment.yml  guidewire.xml  guidewire_model.xml  guidewire_test.xml  merged.xml  mjmodel.xml  package-lock.json  package.json  permission.sh  pyproject.toml  setup.py  test
.github/workflows/: pages.yml
Unity_VR_Aorta_Guidewires/: .gitignore  README.md
cathsim/cathsim/: __init__.py  common.py  env.py  env_config_blood.yaml  env_utils.py  guidewire.py  observables.py  phantom.py
cathsim/utils/: common.py  env_config.yaml  mesh.py
cathsim/wrappers/: __init__.py  wrappers.py
controlMotor/: README.md  camera.py  control.py  control_readme.md  control_use_example.py  controller.py  motor.py  motor_test.py  serial.py
controlMotor/actuator/: actuator.ino
data/figures/: main
data/guidewire-reconstruction/: 0_actual.npy  0_geom_pos.npy  0_side.npy  10_actual.npy  10_geom_pos.npy  10_side.npy  10_top.npy  11_actual.npy  11_geom_pos.npy  11_side.npy  11_top.npy  12_actual.npy  12_geom_pos.npy  12_side.npy  12_top.npy  13_actual.npy  13_geom_pos.npy  13_side.npy  13_top.npy  14_actual.npy  14_geom_pos.npy  14_side.npy  14_top.npy  15_actual.npy  15_geom_pos.npy  15_side.npy  15_top.npy  16_actual.npy  16_geom_pos.npy  16_side.npy  16_top.npy  17_actual.npy  17_geom_pos.npy  17_side.npy  17_top.npy  (+136 more)
data/guidewire-reconstruction-2/: 0_geom_pos.npy  10_geom_pos.npy  11_geom_pos.npy  12_geom_pos.npy  13_geom_pos.npy  14_geom_pos.npy  15_geom_pos.npy  16_geom_pos.npy  17_geom_pos.npy  18_geom_pos.npy  19_geom_pos.npy  1_geom_pos.npy  20_geom_pos.npy  21_geom_pos.npy  22_geom_pos.npy  23_geom_pos.npy  2_geom_pos.npy  3_geom_pos.npy  4_geom_pos.npy  5_geom_pos.npy  6_geom_pos.npy  7_geom_pos.npy  8_geom_pos.npy  9_geom_pos.npy
docs/: Gemfile  _config.yml  index.html
evaluation/: common.py
guidewire_Natthaphat/: guidewire.py  scene.xml
rl/: bc.py  custom_extractor.py  data.py  evaluation.py  sb3_utils.py  train.py  utils.py
scratch/: EDA.ipynb  astar.py  astar_eval.npz  center_line.py  guidewire_reconstruction.py  guidewire_reconstruction2.py  guidewire_reconstruction_3.py  run_env.py  scratch.py  scratch_camera_matrix.py  scratch_control.py  scratch_evaluation.py  scratch_gan.py  scratch_her.py  scratch_plotting.py  scratch_shape_prediction.py  shape_reconstruction.py  test_her.py  test_multi_input.py  viewer.py
scripts/: MUJOCO_LOG.TXT  run_blood_in_Aorta.py  run_fluid.py  test.bash  train.bash  train.sh
shape-prediction/: dataset.py  descriptive_statistics.py  generate_data.py  metrics.py  models.py  optimization.py  scratch.py  shape_reconstruction.py  train.py  utils.py  visualization.py  xray_imitation.py
src/: console.py
tests/: test_data.py  test_dm_env.py  test_guidewire.py  test_gym_env.py  test_longstart.py  test_phantom.py  test_quickstart.py  test_sb3_train.py  test_scene.py  test_task.py  test_training.py  test_trajectory.py  test_tutorial_guidewire.py  test_utils.py  test_visualization.py  test_wrappers.py
transitions/: 0  1  10  11  12  13  14  15  16  17  18  19  2  3  4  5  6  7  8  9
(+5462 files in other folders)
