[project]
name = "cathsim"
version = "0.1.dev2"
description = "Endovascular simulator for autonomy development"
readme = "README.md"  # Point this to your README file if you have one.
# Homepage = "https://robotvisionlabs.github.io/cathsim/"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/robotvisionlabs/cathsim"
license = { file = "LICENSE" }
authors = [
    {name = "Tudor Jianu", email = "tudorjnu@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]
dependencies = [
    "gymnasium",
    "mujoco",
    "opencv-python",
    "imageio",
]

[tool.setuptools.package-data]
myModule = ["*.xml", "*.obj", "*.mtl"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
ignore = ["F401"]
